--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "shufflejs": "^5.2.3"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
