--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
     "jquery": "^3.5.1",
-    "shufflejs": "^5.2.3"
+    "shufflejs": "^5.2.3",
+    "tippy.js": "^6.3.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.54",
